deploy/gateway.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg
spec:
  app:
    image: docker.io/caapim/gateway:11.2.1
    management:
      cluster:
        hostname: gateway.brcmlabs.com
        password: 7layer
      password: 7layer
      username: admin
    replicas: 1
    service:
      ports:
      - name: https
        port: 8443
        protocol: TCP
        targetPort: 8443
      - name: management
        port: 9443
        protocol: TCP
        targetPort: 9443
      type: LoadBalancer
  license:
    accept: false
    secretName: gateway-license
  version: 11.2.1
status: {}
